[project]
name = "expense-classification"
version = "0.1.0"
description = "Expense bill classification — Peakflo take-home (ML Engineer Intern)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0",
    "scikit-learn>=1.8",
    "numpy>=2.4",
    "scipy>=1.17",
    "lightgbm>=4.6",
    "matplotlib>=3.10",
    "seaborn>=0.13",
    "jupyter>=1.0",
    "nbformat>=5.10",
    "nbclient>=0.10",
    "ipykernel>=7.0",
    "joblib>=1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = []
